EASI-1897: Server side widget fixed select "z-index", added row for month

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+.ui-accordion div.ui-accordion-content.room {
+    overflow: visible;
+}
 /* navbar */
 .navbar {
     margin-bottom: 0px;
